[ui] ui css fixes for profile view details [todo] updated todo

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           <a href="#back" data-router="section" data-icon="back"></a>
         </nav>
         <nav class="right box">
-          <a href="#back" data-router="section" data-icon="close" data-label="Fire" class="fireEmp"></a>
+          <a href="#back" data-router="section" data-icon="delete" data-label="Fire" class="fireEmp"></a>
         </nav>
       </header>
       <article class="scroll">
@@ -262,10 +262,10 @@
     <section id="invsetor_profile" data-transition="slide">
       <header id="invProfileName" data-title="Invsetor Profile">
         <nav class="left box">
-          <a href="#back" data-router="section" data-icon="left"></a>
+          <a href="#back" data-router="section" data-icon="back"></a>
         </nav>
         <nav class="right box">
-          <a href="#back" data-router="section" data-icon="close" data-label="Fire" class="fireInv"></a>
+          <a href="#back" data-router="section" data-icon="delete" data-label="Fire" class="fireInv"></a>
         </nav>
       </header>
 
@@ -289,7 +289,7 @@
     <section id="investment" data-transition="slide">
       <header data-title="Get New Investors" class="brownbg">
         <nav class="left box">
-          <a href="#back" data-router="section" data-icon="left"></a>
+          <a href="#back" data-router="section" data-icon="back"></a>
         </nav>
       </header>
 
@@ -301,8 +301,8 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newInvPicId1" value="'+randomInvPicId1+'"><img src="/CoffeeInc2/assets/inv_'+randomInvPicId1+'.svg" class="investor_hire_pic1" id="invHirePic1">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="home"><input type="text" id="newInvEquity1" value="'+randomInvEquity1+'" class="stat_item_inp"></a></br>');//hack
-              document.write('<a data-icon="left"><input type="text" id="newInvOffer1" value="'+randomInvOffer1+'" class="stat_item_inp_sal"></a>');
+              document.write('<a data-icon="percent"><input type="text" id="newInvEquity1" value="'+randomInvEquity1+'" class="stat_item_inp"></a></br>');//hack
+              document.write('<a data-icon="dollar"><input type="text" id="newInvOffer1" value="'+randomInvOffer1+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
             </a>
@@ -312,8 +312,8 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newInvPicId2" value="'+randomInvPicId2+'"><img src="/CoffeeInc2/assets/inv_'+randomInvPicId2+'.svg" class="investor_hire_pic2" id="invHirePic2">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="home"><input type="text" id="newInvEquity2" value="'+randomInvEquity2+'" class="stat_item_inp"></a></br>');//hack
-              document.write('<a data-icon="left"><input type="text" id="newInvOffer2" value="'+randomInvOffer2+'" class="stat_item_inp_sal"></a>');
+              document.write('<a data-icon="percent"><input type="text" id="newInvEquity2" value="'+randomInvEquity2+'" class="stat_item_inp"></a></br>');//hack
+              document.write('<a data-icon="dollar"><input type="text" id="newInvOffer2" value="'+randomInvOffer2+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
             </a>
@@ -323,8 +323,8 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newInvPicId3" value="'+randomInvPicId3+'"><img src="/CoffeeInc2/assets/inv_'+randomInvPicId3+'.svg" class="investor_hire_pic3" id="invHirePic3">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="home"><input type="text" id="newInvEquity3" value="'+randomInvEquity3+'" class="stat_item_inp"></a></br>');//hack
-              document.write('<a data-icon="left"><input type="text" id="newInvOffer3" value="'+randomInvOffer3+'" class="stat_item_inp_sal"></a>');
+              document.write('<a data-icon="percent"><input type="text" id="newInvEquity3" value="'+randomInvEquity3+'" class="stat_item_inp"></a></br>');//hack
+              document.write('<a data-icon="dollar"><input type="text" id="newInvOffer3" value="'+randomInvOffer3+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
             </a>
@@ -334,8 +334,8 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newInvPicId4" value="'+randomInvPicId4+'"><img src="/CoffeeInc2/assets/inv_'+randomInvPicId4+'.svg" class="investor_hire_pic4" id="invHirePic4">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="home"><input type="text" id="newInvEquity4" value="'+randomInvEquity4+'" class="stat_item_inp"></a></br>');//hack
-              document.write('<a data-icon="left"><input type="text" id="newInvOffer4" value="'+randomInvOffer4+'" class="stat_item_inp_sal"></a>');
+              document.write('<a data-icon="percent"><input type="text" id="newInvEquity4" value="'+randomInvEquity4+'" class="stat_item_inp"></a></br>');//hack
+              document.write('<a data-icon="dollar"><input type="text" id="newInvOffer4" value="'+randomInvOffer4+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
             </a>
