[ui] removed sound off button and added about button [todo] udpated todo

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     <script src="lib/coffeeinc.js"></script>
     <script src="lib/game.js"></script>
     <script src="lib/onLoad.js"></script>
+    <script src="lib/onClick.js"></script>
 
   </head>
 
@@ -143,8 +144,9 @@
           <div class="menu-elements">
             <!--        
             <a href="#employees" data-router="article" class="button">Resume</a>           
-            -->
+            
             <button class="button">Sound Off</button><!--class attribute button does not have any effects in style-->
+            <button class="button">About</button>
             <button class="new_game">New Game</button><!--class attribute button does not have any effects in style-->
           </div>
         </form>
