[ui] added js function that outputs about info [todo] updated todo

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <a href="#employees" data-router="article" class="button">Resume</a>           
             
             <button class="button">Sound Off</button><!--class attribute button does not have any effects in style-->
-            <button class="button">About</button>
+            <button onclick="javascript:about();"">About</button>
             <button class="new_game">New Game</button><!--class attribute button does not have any effects in style-->
           </div>
         </form>
