[api] changed all the things like offer algorithm investor equity and so on...

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
     <script src="lib/coffeeinc.js"></script>
     <script src="lib/game.js"></script>
     <script src="lib/onLoad.js"></script>
-    <script src="lib/onClick.js"></script>
 
   </head>
 
@@ -146,7 +145,7 @@
             <a href="#employees" data-router="article" class="button">Resume</a>           
             
             <button class="button">Sound Off</button><!--class attribute button does not have any effects in style-->
-            <button onclick="javascript:about();"">About</button>
+            <button onclick="javascript:about();">About</button>
             <button class="new_game">New Game</button><!--class attribute button does not have any effects in style-->
           </div>
         </form>
