[api] decreased animationtime in employee field

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newInvPicId1" value="'+randomInvPicId1+'"><img src="/CoffeeInc2/assets/inv_'+randomInvPicId1+'.svg" class="investor_hire_pic1" id="invHirePic1">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="percent"><input type="text" id="newInvEquity1" value="'+randomInvEquity1+'" class="stat_item_inp"></a></br>');//hack
+              document.write('<a data-icon="percent"><input type="text" id="newInvEquity1" value="'+randomInvEquity1+'" class="stat_item_inp"></a>');
               document.write('<a data-icon="dollar"><input type="text" id="newInvOffer1" value="'+randomInvOffer1+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
@@ -314,7 +314,7 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newInvPicId2" value="'+randomInvPicId2+'"><img src="/CoffeeInc2/assets/inv_'+randomInvPicId2+'.svg" class="investor_hire_pic2" id="invHirePic2">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="percent"><input type="text" id="newInvEquity2" value="'+randomInvEquity2+'" class="stat_item_inp"></a></br>');//hack
+              document.write('<a data-icon="percent"><input type="text" id="newInvEquity2" value="'+randomInvEquity2+'" class="stat_item_inp"></a>');
               document.write('<a data-icon="dollar"><input type="text" id="newInvOffer2" value="'+randomInvOffer2+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
@@ -325,7 +325,7 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newInvPicId3" value="'+randomInvPicId3+'"><img src="/CoffeeInc2/assets/inv_'+randomInvPicId3+'.svg" class="investor_hire_pic3" id="invHirePic3">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="percent"><input type="text" id="newInvEquity3" value="'+randomInvEquity3+'" class="stat_item_inp"></a></br>');//hack
+              document.write('<a data-icon="percent"><input type="text" id="newInvEquity3" value="'+randomInvEquity3+'" class="stat_item_inp"></a>');
               document.write('<a data-icon="dollar"><input type="text" id="newInvOffer3" value="'+randomInvOffer3+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
@@ -336,7 +336,7 @@
               <script type="text/javascript">
               document.write('<input type="hidden" id="newInvPicId4" value="'+randomInvPicId4+'"><img src="/CoffeeInc2/assets/inv_'+randomInvPicId4+'.svg" class="investor_hire_pic4" id="invHirePic4">');
               document.write('<div class="hireinfo">');
-              document.write('<a data-icon="percent"><input type="text" id="newInvEquity4" value="'+randomInvEquity4+'" class="stat_item_inp"></a></br>');//hack
+              document.write('<a data-icon="percent"><input type="text" id="newInvEquity4" value="'+randomInvEquity4+'" class="stat_item_inp"></a>');
               document.write('<a data-icon="dollar"><input type="text" id="newInvOffer4" value="'+randomInvOffer4+'" class="stat_item_inp_sal"></a>');
               document.write('</div>');
               </script>
@@ -347,29 +347,6 @@
     </section>
     <!-- /////////// END /////////// -->
     <!--//////////// HIRE INVESTORS ////////////-->
-
-
-
-    <!--
-        <aside id="features">
-            <header data-title="Options"></header>
-            <article class="list">
-                <ul>
-                    <li class="current">
-                        <a href="#main-article" data-router="article">
-                            <strong>Main Article</strong>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#second-article" data-router="article">
-                            <strong>Second Article</strong>
-                        </a>
-                    </li>
-                </ul>
-            </article>
-        </aside>
-    -->
-
 
     <script>
     Lungo.init({
