[api] added skill increase per round

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <nav class="left box">
           <a href="#back" data-router="section" data-icon="back"></a>
         </nav>
-        <input type="text" value="emp name" id="empProfileName" class="">
+        <input type="text" value="emp name" id="empProfileName" class="" readonly>
         <nav class="right box">
           <a href="#back" data-router="section" data-icon="delete" data-label="Fire" class="fireEmp"></a>
         </nav>
@@ -265,7 +265,7 @@
         <nav class="left box">
           <a href="#back" data-router="section" data-icon="back"></a>
         </nav>
-        <input type="text" id="invProfileName" value="inv Name">
+        <input type="text" id="invProfileName" value="inv Name" readonly>
         <nav class="right box">
           <a href="#back" data-router="section" data-icon="delete" data-label="Fire" class="fireInv"></a>
         </nav>
