[ui] small css fixes, removed talent from header [minor] other fixes

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <div data-icon="product" class="statusbar_item">
           <input type="text" readonly value="0" id="stat_product" class="stat_item_inp">
         </div>
-        <div data-icon="team" class="statusbar_item">
+        <!--<div data-icon="team" class="statusbar_item">
           <input type="text" readonly value="0" id="stat_talent" class="stat_item_inp">
-        </div>
+        </div>-->
         <div data-icon="sat" class="statusbar_item">
           <input type="text" readonly value="0" id="stat_sat" class="stat_item_inp">
         </div>
