[ux] added 8bit music with html5 audiotag

--- a/index.html
+++ b/index.html
@@ -66,11 +66,10 @@
     <script src="lib/coffeeinc.js"></script>
     <script src="lib/game.js"></script>
     <script src="lib/onLoad.js"></script>
-
   </head>
 
   <body class="app">
-
+  
     <!--//////////// MAIN VIEW ////////////-->
     <!--//////////// Employees, Investors, Main Menu with bottom bar ////////////-->
     <section id="main-view" data-transition="slide">
@@ -353,5 +352,9 @@
       name: 'prueba'
     });
     </script>
+    <audio preload autoplay loop>
+      <source src="assets/Start_it_up_demo.ogg">
+      <source src="assets/Start_it_up_demo.mp3">
+    </audio>
   </body>
 </html>
