[minor] no more audio preload

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       name: 'prueba'
     });
     </script>
-    <audio preload autoplay loop>
+    <audio autoplay loop>
       <source src="assets/Start_it_up_demo.ogg">
       <source src="assets/Start_it_up_demo.mp3">
     </audio>
